# pyramids.hs

./: .gitignore  Main.hs  README.md  Solver.hs  SolverSpec.hs  filetypes.xml  github_settings.xml  input  project.default.xml  pyramids-solver.cabal  vcs.xml
_linux/: path.macros.xml
pyramids-solver/: input  pyramids-solver.cabal
pyramids-solver/src/: Main.hs  Solver.hs
src/: Main.hs  Solver.hs  SolverSpec.hs  Test1.hs  Test2.hs
src/test/: SolverTest.hs
