name:              pyramids-solver
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable pyramids-solver
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base, directory

Test-Suite solver-test
  type:       exitcode-stdio-1.0
  main-is:    SolverTest.hs
  hs-source-dirs:  src/test/
  build-depends: base, directory